--- a/Expense_Tracker_ASP.NET_CORE/appsettings.json
+++ b/Expense_Tracker_ASP.NET_CORE/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=TransactionDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
