--- a/Expense_Tracker_ASP.NET_CORE/appsettings.json
+++ b/Expense_Tracker_ASP.NET_CORE/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=TransactionDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=TransactionDB;Trusted_Connection=True;MultipleActiveResultSets=True;",
+    "AuthenticatinConnection": "Server=(localdb)\\mssqllocaldb;Database=TransactionDBAuth;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
