removed unnecessary codes

--- a/Expense_Tracker_ASP.NET_CORE/appsettings.json
+++ b/Expense_Tracker_ASP.NET_CORE/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=TransactionDB;Trusted_Connection=True;MultipleActiveResultSets=True;",
-    "AuthenticatinConnection": "Server=(localdb)\\mssqllocaldb;Database=TransactionDBAuth;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=TransactionDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
 }
