changed server name

--- a/Expense_Tracker_ASP.NET_CORE/appsettings.json
+++ b/Expense_Tracker_ASP.NET_CORE/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=TransactionDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DevConnection": "Server=PARTH\\SQLEXPRESS;Database=TransactionDB;Integrated Security=True;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
 }
